--- a/src/TestProject/Views/Test.cshtml
+++ b/src/TestProject/Views/Test.cshtml
@@ -1,6 +1,6 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+﻿@*@using Umbraco.Cms.Web.Common.PublishedModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Test>
 @using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
 @{
 	Layout = null;
-}
+}*@
